--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -2,7 +2,7 @@
 .chat-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
   background-color: #2e2f33;
   color: #f1f1f1;
